# kanne

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
kanne/: __init__.py  helpers.py  kanne.py  registry.py  scalars.py  units.py  vars.py
kanne/contrib/rath/: coerce_pint.py
tests/: test_creation.py  test_registry_validation.py  test_scalars.py
