[project]
name = "kanne"
version = "2.3.0"
description = "a context-aware si-unit registry manager built on pint and pydantic"
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=2",
    "pint>=0.25.2",
]

[project.optional-dependencies]
qtpy = ["qtpy>1"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-semantic-release>=10.5.2",
    "scipy>=1.16.3",
]

[tool.hatch.build.targets.sdist]
include = ["kanne"]

[tool.hatch.build.targets.wheel]
include = ["kanne"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
qt_api = "pyqt5"
markers = ["qt: marks tests that require a running qt application", "process: marks tests that require the process extra"]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["kanne"]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"

[tool.mypy]
ignore_missing_imports = true
strict = true

# The optional `rath` contrib depends on an untyped third-party library, so we
# can't subclass its (Any-typed) link classes under strict mode. Scope the
# relaxation to just that module.
[[tool.mypy.overrides]]
module = "kanne.contrib.rath.*"
disallow_subclassing_any = false



[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = true
branch = "main"
build_command = "uv build"
